syntax = "proto3";

package chat_messages;

// Service definition (exposed by .NET server)
service ChatMessagesService {
  rpc GetChatMessages (ChatMessagesRequest) returns (ChatMessagesResponse);
}

// Request message
message ChatMessagesRequest {
  string user_id = 1;
  string conversation_id = 2;
  string start_time = 3;
  string end_time = 4;
}

// Response message
message ChatMessagesResponse {
  string messages = 1; // Format: "username: message\nusername: message"
  string error = 2; // Optional error message
}